# automatic-video-editor

./: .gitignore  MISSING_FEATURES.md  README.md  index.html  install.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/asr/: mod.rs  model_download.rs  parakeet.rs
src-tauri/src/audio/: ffmpeg.rs  mod.rs  waveform.rs
src-tauri/src/image/: mod.rs  openai.rs  overlay_images.rs  playhead_overlay.rs  provider.rs  xai_imagine.rs
src-tauri/src/llm/: openai.rs  overlay_master_prompt.txt
src-tauri/src/pipeline/: assets.rs  jobs.rs  mod.rs  scan.rs  segment.rs  sign_off.rs  word_timing.rs
src-tauri/src/store/: fingerprint.rs  mod.rs  project.rs  secrets.rs
src-tauri/src/video/: composite.rs  encoders.rs  export_session.rs  extensions.rs  mod.rs  timeline.rs  timeline_media.rs
src/components/: EpisodeAccordion.tsx  ImageLightbox.tsx  OverlaySettingsModal.tsx
src/components/layout/: PipelineActivityBanner.tsx  Sidebar.tsx
src/components/video/: VideoEditorModal.tsx  VideoPreviewWithOverlays.tsx  VideoSeekWithMarkers.tsx  VideoTimelineEditor.tsx
src/context/: PipelineActivityContext.tsx  ProjectContext.tsx  VideoExportContext.tsx
src/hooks/: useOverlayDisplayUrl.ts
src/pages/: EditingPage.tsx  FinalVideoPage.tsx  GalleryPage.tsx  ImagesPage.tsx  OverlaysPage.tsx  OverviewPage.tsx  ProjectsPage.tsx  SettingsPage.tsx  TranscribePage.tsx  VideosPage.tsx
src/services/: parakeetModelService.ts  pipelineService.ts
src/types/: pipeline.ts
src/utils/: download.ts  editingEpisodeCache.ts  format.ts  overlayClips.ts  overlayImages.ts  overlayLayout.ts  pipelineProgress.ts  timelineInserts.ts  timelineVideoClips.ts  transcriptionErrors.ts  videoExtensions.ts
