[package]
name = "devotiontime"
version = "0.1.0"
description = "DevotionTime overlay generator for Christian kids YouTube shows"
authors = ["DevotionTime"]
edition = "2021"

[lib]
name = "devotiontime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hound = "3.5"
base64 = "0.22"
keyring = "3"
dirs = "6"
once_cell = "1"
async-trait = "0.1"
which = "7"
sha2 = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
parakeet-rs = { version = "0.3.5", default-features = false, features = ["cpu", "directml", "ort-defaults"] }

[target.'cfg(target_os = "macos")'.dependencies]
parakeet-rs = { version = "0.3.5", default-features = false, features = ["cpu", "coreml", "ort-defaults"] }

[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.dependencies]
parakeet-rs = { version = "0.3.5", default-features = false, features = ["cpu", "ort-defaults"] }
