[package]
name = "devotiontime"
version = "0.4.0"
description = "DevotionTime AI video editing pipeline"
authors = ["DevotionTime"]
edition = "2021"

[lib]
name = "devotiontime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
fuzzy-matcher = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hound = "3.5"
base64 = "0.22"
keyring = "3"
dirs = "6"
once_cell = "1"
async-trait = "0.1"
which = "7"
sha2 = "0.10"
symphonia = { version = "0.5.4", features = ["aac", "alac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }

[target.'cfg(target_os = "windows")'.dependencies]
parakeet-rs = { version = "0.3.5", default-features = false, features = ["cpu", "directml", "ort-defaults"] }

# Apple Silicon: CoreML via ONNX Runtime prebuilts (aarch64-apple-darwin).
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
parakeet-rs = { version = "0.3.5", default-features = false, features = ["cpu", "coreml", "ort-defaults"] }

# Intel Mac: ONNX Runtime dropped x86_64 macOS prebuilts (ort 2.x). Use tract instead of ort-sys linking.
[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
parakeet-rs = { version = "0.3.5", default-features = false, features = ["cpu"] }
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "api-24", "alternative-backend"] }
ort-tract = "0.3"

[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.dependencies]
parakeet-rs = { version = "0.3.5", default-features = false, features = ["cpu", "ort-defaults"] }
